Fix image width on mobile.

--- a/stylesheets/computer/index.css
+++ b/stylesheets/computer/index.css
@@ -19,6 +19,11 @@
 		margin-top: 10px;
 	}
 
+	.bodyContent img
+	{
+		width: auto;
+	}
+
 	.separatorDiv
 	{
 		margin-top: 20px;
